# incubator-guacamole-server

./: Dockerfile  Makefile.am  configure.ac
src/protocols/rdp/: rdp.c  rdp_rail.c
src/protocols/rdp/channels/: cliprdr.c  cliprdr.h
src/protocols/rdp/keymaps/: base.keymap
src/protocols/spice/: Makefile.am  client.c  input.c  input.h  settings.c  settings.h  spice-constants.h  spice.c  spice.h
src/protocols/spice/channels/: audio.c  clipboard.c  clipboard.h  cursor.c  display.c  file.c
